--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Hello Word</string>
     <string name="feur">Feur !</string>
-    <string name="header_title">Notes</string>
+    <string name="valeur">Valeur: </string>
+    <string name="plus1">+1</string>
 </resources>
