Ajout d'un model, d'une liste/page de détail et d'une première navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="feur">Feur !</string>
     <string name="valeur">Valeur: </string>
     <string name="plus1">+1</string>
+    <string name="by_author">De %s</string>
 </resources>
